[gd_scene load_steps=2 format=3 uid="uid://ccjjyvfsdkr8l"]

[ext_resource type="Script" path="res://scripts/game_mode_selector.gd" id="1_8x285"]

[node name="difficulty_selector" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8x285")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 309.0
offset_top = 246.0
offset_right = 478.0
offset_bottom = 304.0
scale = Vector2(3.425, 3.425)

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
text = "   Select Game Mode:"
fit_content = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="pve" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "PvE"

[node name="pvp" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "PvP"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/pve" to="." method="_on_easy_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/pve" to="." method="_on_pve_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/pvp" to="." method="_on_hard_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/pvp" to="." method="_on_pvp_pressed"]
